# polyui-rs

./: .aetherrc.js  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  LICENSE  README.md  flake.nix  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
.cargo/: config.toml
.github/scripts/: setup.ps1  setup.sh
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  utils.rs
apps/cli/src/subcommands/: mod.rs  profile.rs  user.rs
apps/desktop/: package.json  package.json.old  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.html  index.tsx  main.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.linux.conf.json
apps/desktop/src-tauri/native/macos/: Package.resolved  Package.swift
apps/desktop/src-tauri/native/macos/Sources/polyui-desktop-macos/: webview.swift  window.swift
apps/desktop/src-tauri/src/: main.rs  menu.rs
apps/desktop/src-tauri/src/macos/: mod.rs  native.rs  webview.rs  window.rs
apps/landing/: .eslintrc.js  package.json  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
apps/landing/public/: security.txt  site.webmanifest
apps/landing/server/: index.ts
apps/landing/src/: App.tsx  atom-one.css  style.scss  vite-env.d.ts
apps/landing/src/components/: AppEmbed.tsx  Footer.tsx  HomeCTA.tsx  Markdown.tsx  NavBar.tsx  NewBanner.tsx
apps/landing/src/pages/: index.page.tsx
apps/landing/src/renderer/: _default.page.client.tsx  _default.page.server.tsx  _error.page.tsx  usePageContext.tsx
apps/landing/src/utils/: index.ts
apps/website/: astro.config.mjs  package.json  tsconfig.json
core/: Cargo.toml  build.rs
core/prisma/: schema.prisma
core/prisma/migrations/20221217204439_init/: migration.sql
core/prisma/migrations/20221225120626_locations/: migration.sql
core/src/: config.rs  error.rs  lib.rs
core/src/api/: instance.rs  jobs.rs  libraries.rs  microsoft.rs  mod.rs  mod_extraction.rs  mod_sync.rs  normi.rs
core/src/api/utils/: invalidate.rs  library.rs  mod.rs
core/src/entities/: mod.rs
core/src/entities/launch/: mod.rs
core/src/entities/launcher/: args.rs  download.rs  mod.rs  msapi.rs
core/src/entities/microsoft/: mod.rs  msa_device_authenticate.rs  msa_device_flow_error.rs  msa_device_verifing.rs  xbl_user_authenticate.rs  xbl_xsts_authorize.rs
core/src/entities/minecraft/: engine.rs  package.rs
core/src/entities/minecraft/request/: package.rs  versions.rs
core/src/entities/model/: mod_type.rs
core/src/handler/: mod.rs  refresh.rs  requestor.rs  response.rs
core/src/helpers/: java.rs  mod.rs  msapi.rs  msauth.rs  profile.rs
core/src/java/: javautil.rs
core/src/job/: job_manager.rs  mod.rs  worker.rs
core/src/node/: config.rs
core/src/state/: dirs.rs  metadata.rs  mod.rs  profiles.rs  settings.rs  users.rs
core/src/utils/: db.rs  fetch.rs  mod.rs  platform.rs
crates/plugin-json/: Cargo.toml
crates/plugin-meta/: .env.template  Cargo.toml  Dockerfile
crates/plugin-meta/src/: fabric.rs  forge.rs  main.rs  minecraft.rs  quilt.rs
crates/plugin-msapi/: .envrc  Cargo.toml  askama.toml  build.rs
crates/plugin-msapi/assets/: style.css
crates/plugin-msapi/src/: config.rs  db.rs  lib.rs  main.rs
crates/plugin-msapi/src/routes/: auth.rs  login.rs  mod.rs  refresh.rs  socket.rs
crates/plugin-msapi/src/stages/: access_token.rs  bearer_token.rs  login_redirect.rs  mod.rs  player_info.rs  xbl_signin.rs  xsts_token.rs
crates/plugin-msapi/src/templates/: messages.rs  mod.rs  pages.rs
crates/plugin-msapi/templates/: authorize_url
crates/plugin-msapi/templates/bodies/: bearer.json  oauth_token  refresh_token  xbl.json  xsts.json
crates/plugin-msapi/templates/messages/: bearer.json  error.json  ratelimit_code.json
crates/plugin-msapi/templates/pages/: base.html  error.html  success.html  teapot.html
crates/plugin-msapi/tests/: flow.rs
crates/prisma-cli/src/: main.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: main.postcss
src/components/: HelloWorld.vue
