[package]
name = "polyui-core"
version = "0.1.0"
description = "Next gen Minecraft launcher core, written in Rust."
authors = ["Polyfrost"]
repository = "https://github.com/polyfrost/polyui"
edition = "2021"
rust-version = "1.64.0"

[dependencies]
hostname = "0.3.1"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
data-encoding = "2.3.2"
ring = "0.17.0-alpha.11"
int-enum = "0.4.0"
rmp = "^0.8.11"
rmp-serde = "^1.1.1"
sysinfo = "0.26.4"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tokio = { version = "1.21.2", features = [
  "sync",
  "rt-multi-thread",
  "io-util",
] }
fs_extra = "1.2.0"

[dev-dependencies]
tempfile = "^3.3.0"