[package]
name = "polyui-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

[dependencies]
hostname = "0.3.1"
base64 = "0.20"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
int-enum = "0.5.0"
rmp = "^0.8.11"
rmp-serde = "^1.1.1"
blake3 = "1.3.3"
prisma-client-rust = { workspace = true }
rspc = { workspace = true, features = ["uuid", "chrono", "tracing"] }
normi = { workspace = true }
specta = { workspace = true }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
sysinfo = "0.27.1"
thiserror = "1.0.37"
tokio = { version = "1.23", features = [
  "sync",
  "rt-multi-thread",
  "io-util",
] }
include_dir = { version = "0.7.2", features = ["glob"] }
async-trait = "^0.1.57"
image = "0.24.4"
webp = "0.2.2"
fs_extra = "1.2.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
async-stream = "0.3.3"
once_cell = "1.15.0"
ctor = "0.1.23"
globset = { version = "^0.4.9", features = ["serde1"] }
itertools = "^0.10.5"
enumflags2 = "0.7.5"
reqwest = { version = "0.11.13", features = ["blocking", "json", "rustls-tls"] }
url = "2.3.1"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
sha1 = { version = "0.6.0", features = ["std"] }
zip = "0.6.3"
daedalus = { version = "0.1.17", features = ["bincode"] }
dirs = "4.0"
async-tungstenite = { version = "0.19.0", features = ["tokio-runtime", "tokio-native-tls"] }
tracing-error = "0.2"
log = "0.4"
bytes = "1"
sys-info = "0.9"
regex = "1"

[dev-dependencies]
tempfile = "^3.3.0"
tracing-test = "^0.2.3"
argh = "0.1"
pretty_assertions = "1.1.0"