[package]
name = "polyui_meta"
version = "0.0.1"
edition = "2018"

[dependencies]
daedalus = "0.1.17"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
dotenvy = "0.15.6"
log = "0.4.17"
env_logger= "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
thiserror = "1.0"
reqwest = "0.11.13"
zip = "0.5"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.3.0"
rust-s3 = { git = "https://github.com/pauliesnug/rust-s3", rev = "738c4babb750368cae757aa6f675765bc1f7adaf" }
once_cell = "1.17"