[package]
name = "polyui-msapi"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

[dependencies]
askama = "0.11.0"
dashmap = "5.3"
directories = "4.0"
moretypes = "0.1"
uuid = {version = "1.1", features = ["v5"]}
url = "2.2"

serde = "1.0"
serde_json = "1.0"

eyre = "0.6"
color-eyre = "0.5"
log = "0.4"
pretty_env_logger = "0.4"

async-global-executor = "2.2"
smol = "1.2"
trillium = "0.2.3"
trillium-askama = "0.3"
trillium-client = "0.2"
trillium-head = "0.2"
trillium-router = "0.3"
trillium-rustls = "0.1"
trillium-smol = "0.2"
trillium-static-compiled = "0.5"
trillium-websockets = "0.5.1"

[dev-dependencies]
trillium-testing = {version = "0.4", features = ["smol"]}
webbrowser = "0.7"
async-tungstenite = "0.17"

[features]
tls = []