[package]
name = "onelauncher"
version = "0.1.0"
description = "uwu owo"
authors = ["Polyfrost"]
default-run = "onelauncher"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.1.1", features = ["api-all", "macos-private-api"] }
rspc = { workspace = true, features = ["tauri"] }
polyui-core = { path = "../../../core" }
tokio = { version = "1.21.2", features = ["sync", "time"] }
window-shadows = "0.2.0"
tracing = "0.1.36"
serde = "1.0.145"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "autorelease" }

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "autorelease", features = [
  "build",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]